# Flocking-Simulation

./: .gitignore  Boids.7z  LICENSE  Makefile  README.md  boids.cabal  stack.yaml
src/: Boid.hs  EventManager.hs  KDtree.hs  Log.hs  Main.hs  Neighborhood.hs  Octree.hs  Octree.hs.unused  OctreePar.hs  Shader.hs  Utils.hs  Vec3D.hs
