name:                boids
version:             0.1.0.0
cabal-version:       >=1.8
author:              Chase Cummings
maintainer:          chaseecummings@gmail.com
license:             GPL-2
license-file:        LICENSE
category:            Game
build-type:          Simple
synopsis:            A 3D boids simulation

executable boids
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -O1 -Wall -threaded -rtsopts -with-rtsopts=-N
  extensions:          DoAndIfThenElse
  build-depends:       base
                       , random >= 1.0
                       , GLFW-b
                       , GPipe >= 2.1.3
                       , GPipe-GLFW >= 1.2
                       , linear >= 1.19
                       , transformers
                       , containers
